tests/NormalTests/paczka1/small_fuzzy/74311100.err
Error in line 1: 59Jlcr S180 11,3
Error in line 3: vJnTmTBQJ S180 17,1
